[package]
name = "contest"
description = "pick a contest winner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = "5.2.0"
rand = { version = "0.8.5", default-features = false }
rand_chacha = "0.3"

[dev-dependencies]
near-sdk = { version = "5.0.0", features = ["unit-testing"] }
tokio = "1.37.0"
